--- a/03script/20200217_modal/script_modal.html
+++ b/03script/20200217_modal/script_modal.html
@@ -14,8 +14,8 @@
 				console.log(aHref);
 				$("#glayLayer").show();
 				$("#overLayer").show().html("<img src='"+aHref+"'>");
-				return false;//링크취소
-				// e.preventDefault();//링크취소
+				// return false;//링크취소
+				e.preventDefault();//링크취소
 			});
 			$("#glayLayer,#overLayer").click(function(){
 				$("#glayLayer").hide();
