--- a/03script/20200220_position/script_position.html
+++ b/03script/20200220_position/script_position.html
@@ -22,9 +22,9 @@
 				$(".offX").html(childOffset.left);
 				}
 				$(window).resize(function(){
-					hanPo();
+					hanPo();//움직일때마다 위치값
 				});
-				hanPo();
+				hanPo();//전체 문서 로드됐을때 위치값 
 
 				// childWidth=$("#child").width();
 				// childHeight=$("#child").height();
