--- a/20200224_bootstrap/index.html
+++ b/20200224_bootstrap/index.html
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/reset.css">
 	<script src="js/jquery-3.1.1.min.js"></script>
-	<script src="js/bootstrap.bootstrap.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<style>
 		/*.row div{text-align: center;}*/
 		.h100{height: 100px;}
@@ -81,6 +82,73 @@
  		<div class="row">
  			<button type="button" class="btn btn-lg btn-block btn-outline-primary ">basic</button>
  			<button type="button" class="btn btn-sm btn-outline-secondary ml-2">secondary</button>
+ 			<button type="button" class="btn btn-outline-primary ">Primary</button>
+
+ 		</div>
+ 	</div>
+ 	<div class="container mt-5">
+ 		<div class="row">
+ 			<div class="btn-group ml-auto">
+ 				<div class="btn-group">
+ 					<a href="#!" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Apple</a>
+ 					<div class="dropdown-menu">
+ 						<a href="#!" class="dropdown-item">iphonex</a>
+ 						<a href="#!" class="dropdown-item">iphone11</a>
+ 						<a href="#!" class="dropdown-item">iphone11pro</a>
+ 					</div>
+ 				</div>
+ 				<div class="btn-group">
+ 					<a href="#!" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Samsung</a>
+ 					<div class="dropdown-menu">
+ 						<a href="#!" class="dropdown-item">note10</a>
+ 						<a href="#!" class="dropdown-item">note10+</a>
+ 					</div>
+ 				</div>
+ 				<div class="btn-group">
+ 					<a href="#!" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Lg</a>
+ 					<div class="dropdown-menu">
+ 						<a href="#!" class="dropdown-item">v50</a>
+ 						<a href="#!" class="dropdown-item">v50</a>
+ 					</div>
+ 				</div>
+ 			</div>
+ 		</div>
+ 	</div>
+ 	
+ 	<div class="container">
+ 		<a href="#coll" class="btn btn-primary" data-toggle="collapse">상세보기</a>
+ 		<button class="btn btn-secondary" data-toggle="collapse" data-target="#coll1">상세보기1</button>
+ 		<div id="coll" class="collapse">
+ 			<div class="card card-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure aspernatur quibusdam, sed accusantium nobis vel asperiores architecto dolorum neque repudiandae velit voluptate eum dignissimos rerum illo dolorem tenetur, mollitia praesentium tempore officiis veniam, molestiae saepe incidunt eligendi. Totam perspiciatis, aut animi suscipit qui vel consectetur esse eos deserunt, eius corrupti amet, accusantium hic minus. Deserunt laudantium soluta amet, tempore repudiandae reiciendis recusandae, maiores consequuntur dolores mollitia voluptate quisquam, debitis totam incidunt reprehenderit quam. Laudantium, vitae sint! Quibusdam voluptates ullam nisi eos at voluptatibus magni exercitationem repudiandae quo nobis, quia, itaque consectetur pariatur facilis consequatur est. Sapiente vel ullam commodi consectetur.</div>
+ 		</div>
+ 		<div id="coll1" class="collapse">
+ 			<div class="card card-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure aspernatur quibusdam, sed accusantium nobis vel asperiores architecto dolorum neque repudiandae velit voluptate eum dignissimos rerum illo dolorem tenetur, mollitia praesentium tempore officiis veniam, molestiae saepe incidunt eligendi. Totam perspiciatis, aut animi suscipit qui vel consectetur esse eos deserunt, eius corrupti amet, accusantium hic minus. Deserunt laudantium soluta amet, tempore repudiandae reiciendis recusandae, maiores consequuntur dolores mollitia voluptate quisquam, debitis totam incidunt reprehenderit quam. Laudantium, vitae sint! Quibusdam voluptates ullam nisi eos at voluptatibus magni exercitationem repudiandae quo nobis, quia, itaque consectetur pariatur facilis consequatur est. Sapiente vel ullam commodi consectetur.</div>
+ 		</div>
+ 	</div>
+
+ 	<div class="bg-dark">
+ 		<div class="container">
+
+ 			<nav class="navbar navbar-expand-md navbar-dark">
+ 				<a href="#" class="navbar-brand">LOGO</a>
+ 				<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#menu1">
+ 					<span class="navbar-toggler-icon"></span>
+ 				</button>
+ 				<div class="collapse navbar-collapse" id="menu1">
+ 					
+ 					<ul class="navbar-nav ml-auto">
+ 						<li class="nav-item">
+ 							<a href="#!" class="nav-link text-white">menu1</a>
+ 						</li>
+ 						<li class="nav-item">
+ 							<a href="#!" class="nav-link text-white">menu2</a>
+ 						</li>
+ 						<li class="nav-item">
+ 							<a href="#!" class="nav-link text-white">menu3</a>
+ 						</li>
+ 					</ul>
+ 				</div>
+ 			</nav>
  		</div>
  	</div>
 
