--- a/20200121_colorbox/index.html
+++ b/20200121_colorbox/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="css/colorbox.css">
 	<link rel="stylesheet" href="../css/reset.css">
 	<script src="js/jquery-3.1.1.min.js"></script>
-	<script src="js/jquery.colorbox.js"></script>
+	<script src="js/jquery.colorbox-min.js"></script>
 	<script>
 		$(document).ready(function(){
 			$(".modal").colorbox({
