--- a/03script/20200331_weather/weather_card.html
+++ b/03script/20200331_weather/weather_card.html
@@ -24,7 +24,7 @@
 		.weather_info{
 			width: 480px; height: 780px;
 			padding: 80px 0 100px 0;
-			background-color: rgba(0,0,0,.5);
+			_background-color: rgba(0,0,0,.3);
 			color:#ddd;
 			border: 2px solid #ddd;
 			border-radius:30px;
