--- a/01site/test.html
+++ b/01site/test.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta charset="UTF-8">
-	<title>문서 제목</title>
+	<title>이파리 svg 테스트</title>
 </head>
 <body>
 	<div>
