--- a/01site/03travelsite/index.html
+++ b/01site/03travelsite/index.html
@@ -3,12 +3,14 @@
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>tavel_himedia</title>
 	<link rel="stylesheet" href="css/jquery.bxslider.css">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/animate.css">
+	<script src="js/jquery-3.1.1.min.js"></script>
 	<script src="wow.js"></script>
 
 </head>
@@ -49,7 +51,13 @@
 						<li><a href="#"><img src="images/in.jpg" alt=""></a></li>
 					</ul>
 				</div>
+				<div class="toggleMenu">
+                  <div class="bar1"></div>
+                  <div class="bar2"></div>
+                  <div class="bar3"></div>
+            	</div>
 			</div>
+			
 		</div>
 		<div class="nav">
 			<div class="gnb">
@@ -72,7 +80,10 @@
 	<section>
 		<div class="section_bg">
 			<div class="balloon_wrap">
-				<img src="images/balloon.png" alt="">
+				<img src="images/balloon.png" alt="풍선">
+			</div>
+			<div class="airplane_wrap">
+				<img src="images/airplane.png" alt="비행기">
 			</div>
 			<div class="text_wrap">
 				<div class="h2_wrap clearfix">
@@ -370,7 +381,6 @@
 													<span>휴 양 지</span>
 												</div>
 											</a>
-											
 										</div>
 									</div>
 								</div>
@@ -531,8 +541,35 @@
 				mode:"vertical"
 			});
 
+			var pager=$(".pager > a");
+			pager.click(function(){
+				var i=$(this).index();
+				$(".pager > a").removeClass("active").eq(i).addClass("active");
+			});
 
 		});
+		$(".toggleMenu").click(function(){
+	         var myClass= $(this).attr("class"); //$(".toggleMenu")와 같다//
+	         console.log(myClass);
+	         if(myClass == "toggleMenu"){
+	            $(".toggleMenu").addClass("change");
+	            $(".gnb").stop().animate({left:0},300)
+	         }else{
+	            $(".toggleMenu").removeClass("change");
+	            $(".gnb").stop().animate({left:"-100%"},300)
+	         }
+	    });
+	    $(window).resize(function(){
+	         var Wsize =$(window).width();
+	         console.log(Wsize);
+	         if (Wsize>960){
+	            $(".header_top").find(".toggleMenu").removeClass("change");
+	            $(".gnb").css({left:0});
+	         }else{
+	            $(".header_top").find(".toggleMenu").removeClass("change");
+	            $(".gnb").css({left:"-100%"});
+	         }
+	    });
 	</script>
 
 	<script>new WOW().init();</script>
